--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mang</groupId>
-	<artifactId>mang-no</artifactId>
+	<artifactId>mang-sn</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>mang-no</name>
+	<name>mang-sn</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
