--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>mang.sn</groupId>
 	<artifactId>mang-sn</artifactId>
-	<version>0.0.1-JDK1.6-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>mang-sn</name>
@@ -178,12 +178,12 @@
 		<repository>
 			<id>deployment-release</id>
 			<name>deployment-release</name>
-			<url>http://10.4.122.106:7081/repository/common-repo-releases/</url>
+			<url>http://192.168.2.147:7081/repository/common-repo-releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>deployment-snapshot</id>
 			<name>deployment-snapshot</name>
-			<url>http://10.4.122.106:7081/repository/common-repo-snapshots/</url>
+			<url>http://192.168.2.147:7081/repository/common-repo-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
