--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>mang.sn</groupId>
 	<artifactId>mang-sn</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>mang-sn</name>
@@ -18,6 +18,8 @@
 		<log4j.version>1.2.17</log4j.version>
 		<spring.version>4.3.8.RELEASE</spring.version>
 		<hibernate.version>4.3.10.Final</hibernate.version>
+		<mysql.version>5.1.40</mysql.version>
+		<oracle.version>11.2.0.1.0</oracle.version>
 	</properties>
 
 	<dependencies>
@@ -77,7 +79,13 @@
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0.1.0</version>
+			<version>${oracle.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
 		</dependency>
 	</dependencies>
 
